# lightning-hydra-uv-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  README_UV.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
configs/logger/: json.yaml  wandb_enhanced.yaml
docs/: cli_guide.md  docker_guide.md
scripts/: docker_build.sh  docker_run.sh
src/: train.py
src/cli/: __init__.py  base.py  checkpoint.py  debug.py  experiment.py
src/models/: base_module.py  mnist_module.py
src/models/components/: blocks.py  simple_dense_net.py
src/utils/: checkpoint_utils.py  file_utils.py  logging_callbacks.py  metrics_utils.py  pylogger.py  table_utils.py
tests/: conftest.py  test_cli.py  test_docker_setup.py  test_logging_callbacks.py  test_uv_integration.py  utils.py
